build: change build.gradle